[tool.poetry]
name = "20220831-ff-join-bug"
version = "0.1.0"
description = ""
authors = ["Samuel Lampa <samuel.lampa@rilnet.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
featureform = "^1.1.10"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
